--- a/exercicios/ex023/fundo003.html
+++ b/exercicios/ex023/fundo003.html
@@ -36,8 +36,10 @@ div#q4{
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
+    font-family: arial;
+    font-size: 16px;
 }
-  nav{
+  nav {
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
@@ -52,20 +54,32 @@ div#q4{
 </head>
 <body>
     <div class="bloco" id="q1">
-       <p></p>
+        <nav>
+            <a href="#" id="lq">Cidades</a>
+            <a href="#" id="lq">Univeridades
+            <a href="#" id="lq">Tecnologias</a>
+        </nav>
     </div>
     <div class="bloco" id="q2">
-
+        <nav>
+            <a href="#" id="lq">Blocos/Aliancas</a>
+            <a href="#" id="lq">Capacidades Militares</a>
+            <a href="#" id="lq">Curiosidades Historicas</a>
+        </nav>
     </div>
     <div class="bloco" id="q3">
          <nav>
-             <a href="#" id="lq">noticias</a>
-             <a href="#" id="lq">novidades</a>
-             <a href="#" id="lq">curiosidades</a>
+             <a href="#" id="lq">Museus</a>
+             <a href="#" id="lq">Transportes</a>
+             <a href="#" id="lq">Economia</a>
          </nav>
     </div>
     <div class="bloco" id="q4">
-
+        <nav>
+            <a href="#" id="lq">noticias</a>
+            <a href="#" id="lq">novidades</a>
+            <a href="#" id="lq">curiosidades</a>
+        </nav>
     </div>
 </body>
 </html>
