--- a/exercicios/ex023/fundo006.html
+++ b/exercicios/ex023/fundo006.html
@@ -6,16 +6,20 @@
     <title>posicionamento</title>
          <style>
         body{ 
-            background-color: black;
+            /*background-color: black;
             height: 100vh;
             background-image: url(imagens/wallpaper003.jpg);
-            background-size: cover;
-            background-repeat: no-repeat;
             background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+           */
+             background: black url(imagens/wallpaper003.jpg) center center no-repeat fixed;
+             background-size: cover;
         }
 main{
     background-color:aqua;
-    width: 400px;
+    max-width: 400px;
     padding: 10px;
     background-position: center top;
     margin: auto;
@@ -27,13 +31,24 @@ main>p{
     text-indent: 20px;
     color: white;
     background-attachment: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+}
+main>h1{
+    background-color: rgba(85, 107, 47, 0.178);
+    color: rgb(90, 167, 90);
+    border-radius: 10px;
+    font-family: monospace;
+    font-weight: bold;
+}
+.cor1{
+    color: rgb(210, 30, 90) ;
 }
         </style>
 </head>
 <body>
     <main>
-        <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, ratione modi maxime, reprehenderit eum magnam omnis ducimus, eligendi perspiciatis tempore excepturi. Expedita veniam cumque consectetur culpa doloremque consequatur mollitia aliquam!
+        <h1>Teste de imagem de fundo</h1>
+        <p class="cor1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, ratione modi maxime, reprehenderit eum magnam omnis ducimus, eligendi perspiciatis tempore excepturi. Expedita veniam cumque consectetur culpa doloremque consequatur mollitia aliquam!
         </p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab sapiente officiis earum, recusandae nesciunt quidem quisquam. Dolorem, tempore nulla voluptate deserunt quidem magni atque corporis eaque sint libero, sit deleniti.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum consectetur commodi facilis accusantium suscipit excepturi optio omnis quos debitis a voluptas sit impedit nostrum maxime in blanditiis, veniam veritatis praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur repellat doloribus soluta mollitia dolores reprehenderit, eius possimus, sunt voluptates, quos autem commodi quasi in. Sequi nam repellat fuga eius!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus voluptates iure, laborum corrupti soluta expedita, nostrum adipisci eveniet non dolores minima repudiandae quo vel consectetur harum officia totam id! Expedita!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus assumenda sapiente est magnam suscipit expedita doloribus aliquam beatae modi, voluptate enim officia. Molestias earum laboriosam, placeat quo nemo maxime fugit.</p>
