--- a/exercicios/ex023/fundo006.html
+++ b/exercicios/ex023/fundo006.html
@@ -39,6 +39,7 @@ main>h1{
     border-radius: 10px;
     font-family: monospace;
     font-weight: bold;
+    text-indent: 10px;
 }
 .cor1{
     color: rgb(210, 30, 90) ;
