--- a/projectos/projecto cordel/index.html
+++ b/projectos/projecto cordel/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743]" target="_blank">Milton Duarte</a></p>
+        <p><a href="https://www.recantodasletras.com.br/poesias/3186743]" target="_self"></a></p>
     </header>
 
     <section class="normal">
@@ -97,7 +97,7 @@
 
     <footer>
         <p>
-         Site  desenvolvido por <a href="https://github.com/Manharah23" target="_self">Francisco Magure Mahande</a>
+         Site  desenvolvido por : <a href="https://github.com/Manharah23" target="_self">Francisco Magure Mahande,Moscovo_Russia</a>
         </p>
     </footer>
 </body>
