--- a/exercicios/efeitos e dicas/efeitos de um texto sendo digitalizado/texto animado.html
+++ b/exercicios/efeitos e dicas/efeitos de um texto sendo digitalizado/texto animado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="text-animado">
-      voce <span></span>
+    voce  <span></span>
     </div>
 </body>
 </html>
