segundaparte ja esta

--- a/exercicios/efeitos e dicas/portfolio/portfolio.html
+++ b/exercicios/efeitos e dicas/portfolio/portfolio.html
@@ -28,6 +28,31 @@
             </nav>
             <div class="btn-contacto"><a href="#"><button>Fale connosco</button></a></div>
         </div>
-        
+     </header>
+
+
+      <main>
+         <section class="toposite">
+              <div class="interface">
+                  <div class="flex">
+                     <div class="txttoposite">
+                        <h1>PROCURAS ONDE ESTUDAR UM CURSO LIGADO A UM RAMO DA ENGENHARIA MECANICA,ECONOMIA E AREAS DAS TIs<span>?</span></h1>
+                        <p>-entao voce esta numa pesquisa certa ,desde a fundacao da nossa universidae ela tem formado muitos na area ta tecnologia e ecnomia.</p>
+                        <div class="btn-contacto">
+                            <a href="#">
+                                <button>interessado?</button>
+                            </a>
+                        </div><!--btn-contacto-->
+                     </div><!--txttoposite-->
+
+                     <div class="imgtoposite">
+                            <img src="image/trans.png"width="260px" alt="">
+                     </div><!--imgtoposite-->
+                  </div><!--flex-->
+              </div><!--interface-->
+         </section><!--toposite-->
+      </main>
+
+
 </body>
 </html>
