--- a/exercicios/efeitos e dicas/portfolio/portfolio.html
+++ b/exercicios/efeitos e dicas/portfolio/portfolio.html
@@ -51,6 +51,8 @@
                   </div><!--flex-->
               </div><!--interface-->
          </section><!--toposite-->
+
+         <section class="Especialidades"></section><!--especi-->
       </main>
 
 
