--- a/exercicios/efeitos e dicas/portfolio/portfolio.html
+++ b/exercicios/efeitos e dicas/portfolio/portfolio.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>portfolio</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
@@ -14,7 +17,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="image/logotransp.png" width="200px" alt="logo da stankin">
+                    <img src="image/logotransp.png" width="280px" alt="logo da stankin">
                 </a>
             </div>
             <nav class="menu-destop">
@@ -52,7 +55,42 @@
               </div><!--interface-->
          </section><!--toposite-->
 
-         <section class="Especialidades"></section><!--especi-->
+
+
+
+         <section class="Esp">
+               <div class="interface">
+                <h2 class="titulo">NOSSAS <span>FACULDADES.</span></h2>
+
+                   <div class="flex">
+                       <div class="esp-box">
+                        <i class="bi bi-train-front"></i>
+                        <i class="bi bi-car-front-fill"></i>
+                        <i class="bi bi-robot"></i>
+                        <h3>ENGENHARIA MECANICA</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus voluptatibus consectetur, dignissimos ipsum unde velit. Beatae deserunt vero, qui quos voluptatum cumque facere aperiam quisquam eligendi voluptas voluptatem libero odio?</p>
+                       </div><!--espbox-->
+
+                       <div class="esp-box">
+                        <i class="bi bi-pc-display"></i>
+                        <i class="bi bi-cpu-fill"></i>
+                        <i class="bi bi-motherboard-fill"></i>
+                        <h3>CIENCIA DA COMPUTACAO</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus voluptatibus consectetur, dignissimos ipsum unde velit. Beatae deserunt vero, qui quos voluptatum cumque facere aperiam quisquam eligendi voluptas voluptatem libero odio?</p>
+                       </div><!--espbox-->
+
+                       <div class="esp-box">
+                        <i class="bi bi-currency-exchange"></i>
+                        <i class="bi bi-coin"></i>
+                        <i class="bi bi-bank2"></i>
+                        
+                        <h3>ECONOMIA E FINANCAS</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus voluptatibus consectetur, dignissimos ipsum unde velit. Beatae deserunt vero, qui quos voluptatum cumque facere aperiam quisquam eligendi voluptas voluptatem libero odio?</p>
+                       </div><!--espbox-->
+
+                   </div><!--flex-->
+               </div><!--interface-->
+         </section><!--especiali-->
       </main>
 
 
