--- a/exercicios/efeitos e dicas/portfolio/portfolio.html
+++ b/exercicios/efeitos e dicas/portfolio/portfolio.html
@@ -91,6 +91,31 @@
                    </div><!--flex-->
                </div><!--interface-->
          </section><!--especiali-->
+
+         <section class="sobre">
+                  <div class="interface">
+                       <div class="flex">
+                        <div class="imgsobre">
+                            <img src="image/bpl.jpg" width="300px" height="400px" alt="bloco principal">
+                            
+                        </div><!--imgsobre-->
+
+                        <div class="txtsobre">
+                              <h2>SEJA MUITO BEM-VINDO,
+                                <span>ESTAMOS PRONTOS PARA RECEBE-LO E TRANSFORMA-LO EM UM PROFISSIONAL QUE SEMPRE SONHOU SER!</span></h2>
+                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate autem ipsum placeat provident, commodi quae, minus quo incidunt, obcaecati quaerat ratione. Natus temporibus dolor dignissimos possimus. Iure rem commodi perspiciatis.</P>
+                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quo, dolore voluptatibus ducimus ipsam ea alias soluta beatae id eius obcaecati dolor, omnis ad, pariatur molestias! Assumenda illum corrupti voluptatem!</P>
+                                <div class="btn-social">
+                                    <a href="#"><button><i class="bi bi-whatsapp"></i></button></a>
+                                    <a href="#"><button><i class="bi bi-telegram"></i></button></a>
+                                    <a href="#"><button><i class="bi bi-envelope"></i></button></a>
+                                </div><!--btnsocal-->
+                        </div><!--txtsobre-->
+                       </div><!--flex-->
+                  </div><!--interface-->
+         </section><!--sore-->
+
+
       </main>
 
 
