--- a/exercicios/efeitos e dicas/portfolio/portfolio.html
+++ b/exercicios/efeitos e dicas/portfolio/portfolio.html
@@ -29,7 +29,7 @@
                  <li><a href="#">Conquistas</a>
                </ul>
             </nav>
-            <div class="btn-contacto"><a href="#"><button>Fale connosco</button></a></div>
+            <div class="btn-contacto"><a href="#"><button>Faculade Preparatoria</button></a></div>
         </div>
      </header>
 
@@ -101,7 +101,7 @@
                         </div><!--imgsobre-->
 
                         <div class="txtsobre">
-                              <h2>SEJA MUITO BEM-VINDO,
+                              <h2>SEJA MUITO BEM-VINDO!
                                 <span>ESTAMOS PRONTOS PARA RECEBE-LO E TRANSFORMA-LO EM UM PROFISSIONAL QUE SEMPRE SONHOU SER!</span></h2>
                                 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate autem ipsum placeat provident, commodi quae, minus quo incidunt, obcaecati quaerat ratione. Natus temporibus dolor dignissimos possimus. Iure rem commodi perspiciatis.</P>
                                 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quo, dolore voluptatibus ducimus ipsam ea alias soluta beatae id eius obcaecati dolor, omnis ad, pariatur molestias! Assumenda illum corrupti voluptatem!</P>
@@ -115,9 +115,54 @@
                   </div><!--interface-->
          </section><!--sore-->
 
+       <section class="portfolio">
+                <div class="interface">
+                    <h2 class="titulo">NOSSOS <span>LABORATORIOS</span></h2>
+                    <div class="flex">
+                        <div class="ima-port"  style="background-image: url(image/roblab.PNG);">
+                        <div class="overlay">Robotica</div></div>
+                        <div class="ima-port" style="background-image: url(image/infolab.jpg);">
+                        <div class="overlay">Informatica</div></div>
+                        <div class="ima-port"  style="background-image: url(image/lab4.jpg);">
+                        <div class="overlay">Mecatronica</div></div>
+                    </div><!--flex-->
+                </div><!--interface-->
+       </section><!--portfolio-->
 
+       <section class="formulario">
+             <div class="interface">
+                <h2 class="titulo">PARA MAIS <span>INFORMACOES</span></h2>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Seu primeiro Nome:" required>
+                    <input type="text" name="" id="" placeholder="Seu Sobrenome:"required>
+                    <input type="text" name="" id="" placeholder="Seu e-mail:"required>
+                    <input type="text" name="" id="" placeholder="Seu Telefone:"required>
+                    <textarea name="" id="" placeholder="Sua Menssagem" required></textarea>
+                    <div class="btn-enviar"><input type="submit" value="Enviar"></div>
+                </form><!--form-->
+             </div><!--interface-->
+       </section><!--form-->
       </main>
-
+       
+      <footer>
+        <div class="interface">
+               <div class="line-footer">
+                <div class="flex">
+                    <div class="logofooter">
+                        <img src="image/logotransp.png" width="180px" alt="logostankin">
+                    </div><!--logofooter-->
+                    <div class="btn-social">
+                        <a href="#"><button><i class="bi bi-whatsapp"></i></button></a>
+                        <a href="#"><button><i class="bi bi-telegram"></i></button></a>
+                        <a href="#"><button><i class="bi bi-envelope"></i></button></a>
+                </div><!--btnsocal-->
+                </div>
+               </div><!--LFOOT-->
+               <div class="line-footer borda">
+                <p><i class="bi bi-envelope"></i><a href="mailto:magure9323@gmail.com">magure9323@gmail.com</a></p>
+               </div><!--LFOOT-->
+        </div><!--interface-->
+      </footer>
 
 </body>
 </html>
