--- a/curso de javascript/aula05/ex002.html
+++ b/curso de javascript/aula05/ex002.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro programa</title>
+    <title>js</title>
     <style>
         body{
             background-color: aquamarine;
@@ -21,10 +21,8 @@
     <h1>Ola ,Mundo!</h1>
     <p>ja me livrei da maldicao</p>
     <script>
-       window.alert('minha primeira mensagem!')
-        window.confirm('estas a gostando do meu site?'
-        )
-        window.prompt('qual e o seu nome?')
+        var nome = window.prompt('qual e o seu nome?')
+        window.alert('seja muito bem-vido ao meu site, ' + nome + '!')
     </script>
 </body>
 </html>
