--- a/curso de javascript/aula05/ex003.html
+++ b/curso de javascript/aula05/ex003.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro programa</title>
+    <title>js</title>
     <style>
         body{
             background-color: aquamarine;
@@ -21,10 +21,10 @@
     <h1>Ola ,Mundo!</h1>
     <p>ja me livrei da maldicao</p>
     <script>
-       window.alert('minha primeira mensagem!')
-        window.confirm('estas a gostando do meu site?'
-        )
-        window.prompt('qual e o seu nome?')
+        var n1 = Number(window.prompt('Digite um numero: '))
+        var n2 = Number(window.prompt('Digite outro numero: '))
+        var s = (n1 + n2)
+        window.alert(`A soma entre os valores ${n1} e ${n2} e igual a: ${s}`+"!")
     </script>
 </body>
 </html>
