--- a/curso de javascript/previsaodotempo.html
+++ b/curso de javascript/previsaodotempo.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
-<script src="paratempo.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="paratempo.js"></script>
     <title>previsao do tempo</title>
-  
+
 </head>
+
 <body>
     <div class="caixa-maior">
 
         <input type="text" class="input-cidade" placeholder="Digite o Nome da Sua Cidade">
 
-        <button class="butao-busca" onclick="cliquenobutao()"><img src="https://www.svgrepo.com/show/488200/find.svg" alt="busca" class="img-busca"></button>
-        
+        <button class="butao-busca" onclick="cliquenobutao()">
+            <img src="https://www.svgrepo.com/show/488200/find.svg" alt="busca" class="img-busca">
+        </button>
+
         <div class="caixa-media">
             <h2 class="cidade">Tempo em Moscovo</h2>
             <p class="temp">10ºC</p>
-            
+
             <div class="caixa-menor">
                 <img src="https://openweathermap.org/img/wn/04n.png" class="img-previsao" alt="icon de tempo">
-                 <p class="text-previsao">Nublado</p>
+                <p class="text-previsao">Nublado</p>
             </div>
             <p class="Humidade">Humidade: 78%</p>
         </div>
 
     </div>
 </body>
+
 </html>
