--- a/curso de javascript/exercicios de js/modelos/modelo.html
+++ b/curso de javascript/exercicios de js/modelos/modelo.html
@@ -6,17 +6,17 @@
     <title>verificacao</title>
     <link rel="stylesheet" href="modelo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-      <h1>Titulo</h1>
+      <h1>Hora do Dia</h1>
     </header>
 
     <section>
-      <div>
-       Testando....!
+      <div id="msg">
+        Aqui vai aparecer a hora!
       </div>
-      <div>
-        Ola!
+      <div id="foto">
+         <img id="imagem"  src="imagenss/bomdia.jpeg" alt=".">
       </div>
     </section>
 
