--- a/curso de javascript/exercicios de js/climaagora/clima.html
+++ b/curso de javascript/exercicios de js/climaagora/clima.html
@@ -3,14 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="clima.css">
     <script src="clima.js"></script>
     <title>clima</title>
 </head>
 <body>
-    
+
+   <div class="conteiner">
+    <div class="form">
+        <h3>Confira o Clima Duma Cidade:</h3>
+        <div class="form-input-conteiner">
+            <input type="text" placeholder="Digite o nome da cidade" name="" id="city-input">
+            <button id="search">
+                <i class="bi bi-search"></i>
+            </button>
+        </div>
+    </div>
+    <div id="weather-data">
+        <h2><i class="fa-solid fa-location-dot">
+
+        </i><span id="city">Beira</span>
+
+        <img
+        src="https://flagcdn.com/h20/mz.png"
+        srcset="https://flagcdn.com/h40/mz.png 2x,
+          https://flagcdn.com/h60/mz.png 3x"
+        height="20"
+        alt="Mozambique" id="country" />
+        </h2>
+        <p id="temperature"><span>38</span>&deg;C</p>
+        <div id="description-conteiner">
+            <p id="description">Nublado</p>
+            <img src="https://openweathermap.org/img/wn/01d.png" alt="condicoes climaticas" id="weather-icon"/>
+            <div id="details-conteiner">
+                <p id="humidade">
+                    <i class="fa-solid fa-droplet"></i>
+                    <span>54%</span>
+                </p>
+                <p id="vento">
+                    <i class="fa-solid fa-wind"></i>
+                    <span>7km/h</span>
+                </p>
+               
+            </div>
+        </div>
+    </div>
+   </div>
+
 </body>
 </html>
