--- a/curso de javascript/exercicios de js/climaagora/clima.html
+++ b/curso de javascript/exercicios de js/climaagora/clima.html
@@ -21,28 +21,31 @@
     <div class="form">
         <h3>Confira o Clima Duma Cidade:</h3>
         <div class="form-input-conteiner">
-            <input type="text" placeholder="Digite o nome da cidade" name="" id="city-input">
+            <input type="text" placeholder="Digite o nome da cidade" id="city-input">
+
             <button id="search">
                 <i class="bi bi-search"></i>
             </button>
+
         </div>
     </div>
-    <div id="weather-data">
-        <h2><i class="fa-solid fa-location-dot">
 
-        </i><span id="city">Beira</span>
+    <div id="weather-data">
+        <h2><i class="fa-solid fa-location-dot"></i>
+
+            <span id="city">Beira</span>
 
         <img
         src="https://flagcdn.com/h20/mz.png"
-        srcset="https://flagcdn.com/h40/mz.png 2x,
-          https://flagcdn.com/h60/mz.png 3x"
-        height="20"
-        alt="Mozambique" id="country" />
+        alt="Mozambique" id="country">
         </h2>
+
         <p id="temperature"><span>38</span>&deg;C</p>
+
         <div id="description-conteiner">
             <p id="description">Nublado</p>
             <img src="https://openweathermap.org/img/wn/01d.png" alt="condicoes climaticas" id="weather-icon"/>
+            
             <div id="details-conteiner">
                 <p id="humidade">
                     <i class="fa-solid fa-droplet"></i>
