--- a/curso de javascript/cursode js/funcoes.html
+++ b/curso de javascript/cursode js/funcoes.html
@@ -48,7 +48,7 @@
             color:yellow;
             border: 3px solid;
             box-shadow: 5px 5px 30px rgba(255, 255, 0, 0.733);
-            margin 50px;
+            margin: 50px;
             outline-color: aqua;
 
            /*padding-left: 50%;*/
